# evaluation-runtime

./: .dockerignore  .env.sample  .gitignore  CHANGELOG.md  Dockerfile  README.md  executionmain.py  pyproject.toml
input/: test.py
resources/samples/: extraction.json  prompt.ipynb
samples/: prompt.ipynb  test.ipynb  test.py
src/: constants.py  main.py
src/boilerplate/: Dockerfile  pyproject.toml
src/utils/: azure.py  docker.py  evaluation.py  file.py  kubernetes.py  notebook.py
